Method for running cmds now uses ProcessBuilder